# time-resolved-spectroscopy-fit

./: .codex  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  llms.txt  pyproject.toml  requirements.txt
.claude/skills/add-function/: SKILL.md
.claude/skills/benchmark/: SKILL.md  benchmark_gir.py
.claude/skills/bump-versions/: SKILL.md
.claude/skills/changelog/: SKILL.md
.claude/skills/check-docs/: SKILL.md  check_missing_docstrings.py  check_stale_docstrings.py
.claude/skills/check-example/: SKILL.md  check_example_mechanics.py
.claude/skills/code-review/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  release.yaml
docs/: conf.py  index.rst  installation.md  quickstart.md  stability.md
docs/ai/: add-function.md  benchmark.md  bump-versions.md  changelog.md  check-docs.md  check-example.md  code-review.md  index.md
docs/api/: eval_1d.rst  eval_2d.rst  eval_jax.rst  fit_results.rst  fitlib.rst  functions_energy.rst  functions_profile.rst  functions_time.rst  graph_ir.rst  index.rst  mcp.rst  plot_config.rst  simulator.rst  spectra.rst  trspecfit.rst
docs/design/: examples_upgrade.md  execution_plan.md  fit_archive_schema.md  jax-planning.md  kernel-matrix-convolution.md  lowered_evaluator.md  model_design_rules.md  numba_vs_jax.md  project-level-fits.md  repo_architecture.md  roundtrip_test_matrix.md  supported_models.md  ui.md
docs/design/archive/: code-review-2026-07.md  fit_results_save_load_plan.md  jax-backend.md  kernel-matrix-convolution.md  lowered_evaluator_implementation.md  numba_vs_jax.md  results-ownership-and-plotting.md
docs/examples/: index.rst
examples/: README.md
examples/XPS_Au4f/: XPS example Au4f.ipynb  models_Au4f.yaml  models_time.yaml
examples/XPS_Au4f/data/: data.csv  energy.csv
examples/data_generation/ml_training/: example.ipynb  models_energy.yaml  project.yaml
examples/data_generation/simulator/: example.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/dependent_parameters/: example.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/dependent_parameters/data/: data.csv  energy.csv
examples/fitting_workflows/: README.md
examples/fitting_workflows/01_basic_fitting/: example.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/fitting_workflows/02_dependent_parameters/: example.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/fitting_workflows/03_multi_cycle/: example.ipynb  models_energy.yaml  project.yaml
examples/fitting_workflows/03_multi_cycle_dynamics/: example.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/fitting_workflows/04_par_profiles/: example.ipynb  generate_data.ipynb  models_energy.yaml  models_profile.yaml  models_time.yaml  project.yaml
examples/fitting_workflows/04_parameter_profiles/: example.ipynb  models_energy.yaml  models_profile.yaml  models_time.yaml  project.yaml
examples/fitting_workflows/05_project_level_fitting/: example.ipynb  models_time.yaml
examples/fitting_workflows/10_model_comparison/: example.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/fitting_workflows/11_save_load_export/: example.ipynb
examples/fitting_workflows/12_uncertainty_mcmc/: example.ipynb
examples/fitting_workflows/20_fit_each_separately/: example.ipynb  project.yaml
examples/fitting_workflows/20_multi_file_independent_fit/: example.ipynb  models_time.yaml
examples/fitting_workflows/21_multi_file_shared_fit/: example.ipynb  models_energy.yaml  project.yaml
examples/simulator/: example.ipynb  get_traindata.ipynb  ml_training_data_gen.ipynb  models_energy.yaml  models_time.yaml  project.yaml  sim example.ipynb
examples/simulatorBL931/: ml_training_data_gen.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/subcycles/: example.ipynb  ml_training_data_gen.ipynb  models_energy.yaml  models_time.yaml  project.yaml
examples/subcycles/data/: time.csv
examples/synthetic_data/01_simulator/: models_time.yaml
examples/synthetic_data/02_ml_training_data/: models_time.yaml
scripts/: normalize_notebooks.py
simulated_data/: test_1d.h5
src/trspecfit/: __init__.py  config.py  eval_1d.py  eval_2d.py  eval_jax.py  fit_results.py  fitlib.py  graph_ir.py  mcp.py  simulator.py  spectra.py  trspecfit.py
src/trspecfit/config/: functions.py  plot.py
src/trspecfit/functions/: __init__.py  depth.py  distribution.py  energy.py  profile.py  time.py
src/trspecfit/utils/: __init__.py  arrays.py  fit_io.py  hdf5.py  lmfit.py  misc.py  parsing.py  plot.py  regex.py  sbs.py  spawn.py  sweep.py  util_arrays.py  util_lmfit.py  (+2 more)
tests/: _utils.py  conftest.py  test_arrays.py  test_auto_export.py  test_config_functions.py  test_data_corrections.py  test_eval_2d.py  test_evaluate_1d.py  test_evaluate_2d.py  test_evaluate_jax.py  test_export_fits_parity.py  test_file.py  test_fit_archive_roundtrip.py  test_fit_history.py  test_fit_side_effects.py  test_fit_spectrum.py  test_fit_validation.py  test_fitlib.py  test_full_range_plot.py  test_functions_convolution.py  test_functions_energy.py  test_functions_profile.py  test_functions_time.py  test_gir_integration.py  test_graph_ir.py  test_lmfit_utils.py  test_mcp_eval.py  test_mcp_library.py  test_model_parser.py  test_models_energy.yaml  test_models_profile.yaml  test_models_time.yaml  test_parameter_sweep.py  test_plotting.py  test_project_fit.py  test_roundtrip_basic.py  test_roundtrip_profile.py
tests/models/: eval_2d_energy.yaml  file_energy.yaml  file_profile.yaml  file_time.yaml  project_energy.yaml  project_time.yaml
tests/roundtrip/: families.py  matrix.py  test_focused.py  test_matrix.py  test_noisy.py  test_par_ordering.py  test_pickle.py  test_project.py  test_update_value.py  workflows.py
tests/trspecfit/: test_config.py  test_mcp_library.py  test_model_parser.py  test_models_energy.yaml  test_models_time.yaml  test_parameter_sweep.py  test_plotting.py
(+44 files in other folders)
