[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "trspecfit"
version = "0.4.2"
authors = [
    {name = "Johannes Mahl", email = "johannes.a.mahl@gmail.com"},
]
description = "Fit 2D time- and energy-resolved spectroscopy data"
keywords = ["fit", "fitting", "spectroscopy", "2D", "multi-dimensional", "time-resolved", "global fit"]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"

classifiers = [
       "Development Status :: 3 - Alpha",
       "Intended Audience :: Science/Research",
       "Topic :: Scientific/Engineering :: Physics",
       "License :: OSI Approved :: BSD License",
       "Programming Language :: Python :: 3",
       "Programming Language :: Python :: 3.12",
]

dependencies = [
	"lmfit",
	"asteval",
	"numdifftools",
	"emcee",
	"tqdm",
	"corner",
	"numpy",
	"pandas",
	"scipy",
	"ruamel.yaml",
	"h5py",
	"ipython",
	"matplotlib",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "deptry",
  "mypy",
  "pytest",
  "pyright",
  "ruff",
  "build",
  "twine",
]

lab = [
  "ipykernel>=6",
  "jupyterlab>=4",
]

[project.urls]
Repository = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/"
"Bug Tracker" = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/issues"
Discussions = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/discussions"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
reportMissingImports = true
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PD"]

[tool.deptry]
known_first_party = ["trspecfit"]
ignore_notebooks = true
pep621_dev_dependency_groups = ["dev", "lab"]
# confidence interval estimation needs to work with standard install
# keep these as runtime deps even though used indirectly via lmfit
[tool.deptry.per_rule_ignores]
DEP002 = ["numdifftools", "emcee", "tqdm"]
