[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "trspecfit"
version = "0.12.3"
authors = [
    {name = "Johannes Mahl", email = "infinitymonkeyatwork@gmail.com"},
]
description = "Fit 2D time- and energy-resolved spectroscopy data"
keywords = [
  "fit",
  "fitting",
  "spectroscopy",
  "2D",
  "multi-dimensional",
  "time-resolved",
  "global fit",
  ]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

# Lower bounds are "supports Python >=3.12" floors, validated by the
# min-versions CI job (pins these floors, lets pip resolve the transitive graph,
# then runs the suite). Raise a floor when code starts relying on a newer API.
dependencies = [
	"lmfit>=1.2",
	"asteval>=1.0",
	"numdifftools>=0.9.41",
	"emcee>=3.1",
	"tqdm>=4.66",
	"corner>=2.2",
	"numpy>=1.26",
	"pandas>=2.1.1",
	"scipy>=1.11.2",
	"ruamel.yaml>=0.18",
	"h5py>=3.10",
	"ipython>=8.18",
	"matplotlib>=3.8",
]

[project.optional-dependencies]
# NB: the min-versions CI job pins uv (see .github/workflows/ci.yaml) — bump it
# alongside these dev pins.
dev = [
  "pre-commit==4.6.0",
  "deptry==0.25.1",
  "mypy==2.1.0",
  "nbformat==5.10.4",      # used by scripts/normalize_notebooks.py (pre-commit hook)
  "nbstripout==0.9.1",
  "pytest==9.1.1",
  "pyright==1.1.411",
  "ruff==0.15.20",
  "build==1.5.0",
  "twine==6.2.0",
]

# Experimental JAX evaluator backend (CPU wheel; see
# docs/design/jax-planning.md). Tests that exercise it skip when
# jax is not installed.
jax = [
  "jax>=0.4.35",
]

# Optional notebook/visualization support
# Also requires the Graphviz "dot" executable on your PATH.
# Linux example: sudo apt-get install graphviz
# macOS example: brew install graphviz
# Windows example: install Graphviz and add its bin directory to PATH
lab = [
  "ipykernel>=6",
  "jupyterlab>=4",
  "graphviz",
]

# Optional profiling tools for the benchmark skill.
# Install with: pip install -e ".[profiling]"
profiling = [
  "py-spy",
]

[project.urls]
Repository = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/"
"Bug Tracker" = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/issues"
Discussions = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/discussions"

[tool.mypy]
files = ["src/trspecfit"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
reportMissingImports = true
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: long-running round-trip tests (skipped by default, use -m slow)"]
filterwarnings = [
    # test fixtures often sample exactly on subcycle boundaries (integer-step
    # axes); the knife-edge warning is asserted explicitly via pytest.warns
    "ignore:.*subcycle boundary:UserWarning",
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
    "ignore:invalid value encountered in scalar divide:RuntimeWarning:lmfit",
    "ignore:This process .* use of fork\\(\\) may lead to deadlocks in the child\\.:DeprecationWarning",
]

[tool.ruff]
line-length = 88
exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PD", "C90", "BLE", "NPY"]
ignore = ["C901"]

[tool.deptry]
known_first_party = ["trspecfit"]
ignore_notebooks = true
optional_dependencies_dev_groups = ["dev"]
# confidence interval estimation needs to work with standard install
# keep these as runtime deps even though used indirectly via lmfit
# py-spy is a CLI tool invoked via shell (see benchmark skill), not imported
# jax is the optional [jax] extra, imported behind a TYPE_CHECKING/try guard
[tool.deptry.per_rule_ignores]
DEP002 = [
  "numdifftools",
  "emcee",
  "tqdm",
  "ipykernel",
  "jupyterlab",
  "graphviz",
  "py-spy",
  "jax",
]
# scripts/normalize_notebooks.py is dev-only tooling (pre-commit hook),
# so its dev-dep imports are intentional. deptry treats anything outside
# tests/ as runtime code by default and has no "dev source dir" knob.
DEP004 = [
  "nbformat",
]
